# evalops-dashboard

./: .gitignore  AGENTS.md  CLAUDE.md  LEDGER.md  PM_PROTOCOL.md  README.md  alembic.ini  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260710_0001_initial_schema.py  20260710_0002_rubric_driven_evaluations.py  20260710_0003_model_pricing_and_cost_tracking.py  20260710_0004_authentication.py  20260712_0005_login_rate_limiting.py  20260712_0006_role_based_access_control.py  20260712_0007_llm_judge_cost_tracking.py
ollama_smoke_test/: test_ollama_smoke.py
postgres_smoke_test/: test_postgres_smoke.py
src/evalops_dashboard/: __init__.py  auth.py  comparison.py  cost.py  criteria_analytics.py  database.py  llm_judge.py  main.py  models.py  scoring.py  seed.py
src/evalops_dashboard/routers/: __init__.py  analytics.py  auth.py  comparisons.py  dashboard.py  evaluations.py  pricing.py  rubrics.py
src/evalops_dashboard/static/: dashboard.css
src/evalops_dashboard/templates/: analytics.html  base.html  evaluation_detail.html  evaluations_list.html  index.html  login.html  prompt_comparison.html  prompt_detail.html  prompts_list.html  response_detail.html  responses_list.html  rubric_detail.html  rubrics_list.html
src/evalops_dashboard/templates/partials/: bar_chart.html  empty_state.html
tests/: conftest.py  test_app.py  test_auth.py  test_comparison.py  test_comparisons.py  test_cost.py  test_criteria_analytics.py  test_dashboard.py  test_dashboard_comparison.py  test_database_config.py  test_evaluations.py  test_evaluations_csv.py  test_llm_judge.py  test_migrations.py  test_model_responses.py  test_pricing.py  test_rubrics.py  test_scoring.py
