[project]
name = "evalops-dashboard"
version = "0.12.0"
description = "A lightweight AI evaluation operations dashboard for prompts, model responses, and rubric evaluations."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "anthropic>=0.40.0",
    "bcrypt>=4.2.0",
    "fastapi>=0.116.0",
    "jinja2>=3.1.0",
    "ollama>=0.4.0",
    "psycopg[binary]>=3.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evalops_dashboard"]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py314"
extend-exclude = [".venv", ".uv-cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
